many models and ai
chatbot ai should be working, @MehtabW27 @mathunada07 and @manan, we need to create more training data

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ dmypy.json
 .idea/humm.iml
 .idea/workspace.xml
 .idea/workspace.xml
+humm_backend/humm_backend/models/124M/model.ckpt.data-00000-of-00001
