--- a/humm_backend/requirements.txt
+++ b/humm_backend/requirements.txt
@@ -1,8 +1,15 @@
+absl-py==1.2.0
 asgiref==3.5.2
+asttokens==2.0.5
+astunparse==1.6.3
+attrs==22.1.0
 blis==0.7.8
+cachetools==5.2.0
 catalogue==2.0.8
 certifi==2022.6.15
 charset-normalizer==2.1.0
+chatbotAI==0.3.1.3
+ChatterBot==1.0.4
 chatterbot-corpus==1.2.0
 click==8.1.3
 colorama==0.4.5
@@ -10,41 +17,103 @@ cymem==2.0.6
 Django==4.0.6
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
+entrypoints==0.4
+executing==0.9.1
+fastjsonschema==2.16.1
+filelock==3.7.1
+flatbuffers==1.12
+future==0.18.2
+gast==0.4.0
+google-auth==2.9.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+gpt-2-simple==0.8.1
+grpcio==1.48.0
+h5py==3.7.0
+huggingface-hub==0.8.1
 idna==3.3
+importlib-metadata==4.12.0
 Jinja2==3.1.2
 joblib==1.1.0
+jsondatabase==0.1.7
+jsonschema==4.9.1
+jupyter-core==4.11.1
+keras==2.9.0
+Keras-Preprocessing==1.1.2
 langcodes==3.3.0
+libclang==14.0.1
+Markdown==3.4.1
 MarkupSafe==2.1.1
 mathparse==0.1.2
 murmurhash==1.0.7
+nest-asyncio==1.5.5
 nltk==3.7
 numpy==1.23.1
+oauthlib==3.2.0
+opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.3
+parso==0.8.3
 pathy==0.6.2
+Pillow==9.2.0
 Pint==0.19.2
 preshed==3.0.6
+protobuf==3.19.4
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
 pydantic==1.9.1
+Pygments==2.12.0
 pymongo==3.12.3
 pyparsing==3.0.9
-python-dateutil==2.7.5
+pyrsistent==0.18.1
+python-dateutil==2.8.2
 python-decouple==3.6
+python-twitter==3.5
 pytz==2022.1
+pywin32==304
 PyYAML==3.13
+pyzmq==23.2.0
 regex==2022.7.25
 requests==2.28.1
+requests-oauthlib==1.3.1
+rsa==4.9
 six==1.16.0
 smart-open==5.2.1
+soupsieve==2.3.2.post1
 spacy==3.4.1
 spacy-legacy==3.0.9
 spacy-loggers==1.0.3
 SQLAlchemy==1.2.19
 sqlparse==0.4.2
 srsly==2.4.4
+stack-data==0.3.0
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-gpu==2.9.1
+tensorflow-io-gcs-filesystem==0.26.0
+termcolor==1.1.0
 thinc==8.1.0
+tokenizers==0.12.1
+toposort==1.7
+torch==1.12.0+cu116
+torchaudio==0.12.0+cu116
+torchvision==0.13.0+cu116
+tornado==6.2
 tqdm==4.64.0
+traitlets==5.3.0
+transformers==4.21.0
 typer==0.4.2
 typing_extensions==4.3.0
 tzdata==2022.1
 urllib3==1.26.11
 wasabi==0.10.1
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.2.1
+wrapt==1.14.1
+zipp==3.8.1
