ai/ml pipelines
treid some things, overfitting is a problem, check data leakage and class imbalance, need to break 0.75 for viability in production

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,4 @@ humm_backend/humm_backend/models/124M/model.ckpt.data-00000-of-00001
 *.xml
 *.xml
 .idea/workspace.xml
+RandD/data/glove.6B.50d.txt
