--- a/humm-frontend/package.json
+++ b/humm-frontend/package.json
@@ -15,7 +15,7 @@
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "reactstrap": "^9.1.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
