--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@ dmypy.json
 .idea/workspace.xml
 .idea/workspace.xml
 humm_backend/humm_backend/models/124M/model.ckpt.data-00000-of-00001
+*.pickle
+RandD/data/glove.6B.50d.txt
