--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.idea/workspace.xml
+humm_backend/db.sqlite3-shm
+humm_backend/db.sqlite3-wal
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
