--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,6 @@ dmypy.json
 humm_backend/humm_backend/models/124M/model.ckpt.data-00000-of-00001
 *.pickle
 RandD/data/glove.6B.50d.txt
+.idea/workspace.xml
+humm_backend/db.sqlite3-shm
+humm_backend/db.sqlite3-wal
