Updated list of resources and accounted for duplicate resources

--- a/humm-frontend/package.json
+++ b/humm-frontend/package.json
@@ -20,11 +20,13 @@
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-linkify": "^1.0.0-alpha",
     "reactstrap": "^9.1.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/react-linkify": "^1.0.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
