--- a/humm_backend/requirements.txt
+++ b/humm_backend/requirements.txt
@@ -1,119 +1,105 @@
-absl-py==1.2.0
-asgiref==3.5.2
-asttokens==2.0.5
-astunparse==1.6.3
-attrs==22.1.0
+about-time==3.1.1
+absl-py==1.0.0
+alabaster==0.7.12
+alive-progress==2.4.1
+astroid==2.4.2
+attrs==20.3.0
+autokeras==1.0.19
+Babel==2.10.1
+bleach==3.2.3
 blis==0.7.8
-cachetools==5.2.0
-catalogue==2.0.8
-certifi==2022.6.15
-charset-normalizer==2.1.0
-chatbotAI==0.3.1.3
-ChatterBot==1.0.4
-chatterbot-corpus==1.2.0
-click==8.1.3
+catalogue==2.0.7
+cffi==1.14.4
 colorama==0.4.5
+cryptography==37.0.3
+cv==1.0.0
 cymem==2.0.6
-Django==4.0.6
-django-cors-headers==3.13.0
-djangorestframework==3.13.1
-entrypoints==0.4
-executing==0.9.1
-fastjsonschema==2.16.1
-filelock==3.7.1
+docutils==0.17.1
+fastai==2.7.3
+fastcore==1.4.5
+fastdownload==0.0.6
+fastprogress==1.0.2
 flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-google-auth==2.9.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-gpt-2-simple==0.8.1
-grpcio==1.48.0
-h5py==3.7.0
-huggingface-hub==0.8.1
-idna==3.3
-importlib-metadata==4.12.0
-Jinja2==3.1.2
-joblib==1.1.0
-jsondatabase==0.1.7
-jsonschema==4.9.1
-jupyter-core==4.11.1
+grad-cam==1.3.9
+grapheme==0.6.0
+imagesize==1.3.0
+imgaug==0.4.0
+importlib-metadata==4.11.3
+ipykernel==5.4.3
+ipyparallel==8.2.1
+ipython==7.19.0
+ipywidgets==7.6.3
+isort==5.7.0
+jedi==0.18.0
+Jinja2==2.11.3
+jupyter-client==6.1.11
+jupyter-core==4.7.1
+jupyterlab-widgets==1.0.0
 keras==2.9.0
-Keras-Preprocessing==1.1.2
+keras-tuner==1.1.2
+kiwisolver==1.3.1
+kt-legacy==1.0.4
 langcodes==3.3.0
+lazy-object-proxy==1.4.3
 libclang==14.0.1
-Markdown==3.4.1
-MarkupSafe==2.1.1
-mathparse==0.1.2
+matplotlib==3.3.4
+mccabe==0.6.1
+mediapipe==0.8.10
+mrcnn==0.2
 murmurhash==1.0.7
-nest-asyncio==1.5.5
-nltk==3.7
-numpy==1.23.1
-oauthlib==3.2.0
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.4.3
-parso==0.8.3
-pathy==0.6.2
-Pillow==9.2.0
-Pint==0.19.2
+nbclient==0.5.1
+nbformat==5.1.2
+nest-asyncio==1.5.1
+nose==1.3.7
+notebook==6.2.0
+numpy==1.20.0
+opencv-contrib-python==4.6.0.66
+outcome==1.2.0
+packaging==20.9
+pandocfilters==1.4.3
+parso==0.8.1
+pathy==0.6.1
+Pillow==9.1.1
+polls==0.1
 preshed==3.0.6
-protobuf==3.19.4
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydantic==1.9.1
-Pygments==2.12.0
-pymongo==3.12.3
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-dateutil==2.8.2
-python-decouple==3.6
-python-twitter==3.5
-pytz==2022.1
-pywin32==304
-PyYAML==3.13
-pyzmq==23.2.0
-regex==2022.7.25
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.14
+psycopg2-binary==2.9.1
+PyAudio==0.2.11
+pydantic==1.8.2
+Pygments==2.7.4
+pylint==2.6.0
+pyzmq==22.0.2
+qtconsole==5.0.2
+Shapely==1.8.1.post1
 smart-open==5.2.1
-soupsieve==2.3.2.post1
-spacy==3.4.1
+snowballstemmer==2.2.0
+spacy==3.3.1
 spacy-legacy==3.0.9
-spacy-loggers==1.0.3
-SQLAlchemy==1.2.19
-sqlparse==0.4.2
-srsly==2.4.4
-stack-data==0.3.0
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
+spacy-loggers==1.0.2
+Sphinx==4.5.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+srsly==2.4.3
 tensorflow==2.9.1
 tensorflow-estimator==2.9.0
-tensorflow-gpu==2.9.1
 tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
-thinc==8.1.0
-tokenizers==0.12.1
-toposort==1.7
-torch==1.12.0+cu116
-torchaudio==0.12.0+cu116
-torchvision==0.13.0+cu116
-tornado==6.2
-tqdm==4.64.0
-traitlets==5.3.0
-transformers==4.21.0
-typer==0.4.2
-typing_extensions==4.3.0
-tzdata==2022.1
-urllib3==1.26.11
-wasabi==0.10.1
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.2.1
-wrapt==1.14.1
-zipp==3.8.1
+terminado==0.9.2
+thinc==8.0.17
+toml==0.10.2
+torch==1.8.1
+torchcam==0.3.1
+torchvision==0.9.1
+tornado==6.1
+traitlets==5.0.5
+trio==0.21.0
+ttach==0.0.3
+typer==0.4.1
+wasabi==0.9.1
+webdriver-manager==3.7.1
+xlrd==2.0.1
+zipp==3.8.0
