--- a/humm_backend/requirements.txt
+++ b/humm_backend/requirements.txt
@@ -1,105 +1,7 @@
-about-time==3.1.1
-absl-py==1.0.0
-alabaster==0.7.12
-alive-progress==2.4.1
-astroid==2.4.2
-attrs==20.3.0
-autokeras==1.0.19
-Babel==2.10.1
-bleach==3.2.3
-blis==0.7.8
-catalogue==2.0.7
-cffi==1.14.4
-colorama==0.4.5
-cryptography==37.0.3
-cv==1.0.0
-cymem==2.0.6
-docutils==0.17.1
-fastai==2.7.3
-fastcore==1.4.5
-fastdownload==0.0.6
-fastprogress==1.0.2
-flatbuffers==1.12
-grad-cam==1.3.9
-grapheme==0.6.0
-imagesize==1.3.0
-imgaug==0.4.0
-importlib-metadata==4.11.3
-ipykernel==5.4.3
-ipyparallel==8.2.1
-ipython==7.19.0
-ipywidgets==7.6.3
-isort==5.7.0
-jedi==0.18.0
-Jinja2==2.11.3
-jupyter-client==6.1.11
-jupyter-core==4.7.1
-jupyterlab-widgets==1.0.0
-keras==2.9.0
-keras-tuner==1.1.2
-kiwisolver==1.3.1
-kt-legacy==1.0.4
-langcodes==3.3.0
-lazy-object-proxy==1.4.3
-libclang==14.0.1
-matplotlib==3.3.4
-mccabe==0.6.1
-mediapipe==0.8.10
-mrcnn==0.2
-murmurhash==1.0.7
-nbclient==0.5.1
-nbformat==5.1.2
-nest-asyncio==1.5.1
-nose==1.3.7
-notebook==6.2.0
-numpy==1.20.0
-opencv-contrib-python==4.6.0.66
-outcome==1.2.0
-packaging==20.9
-pandocfilters==1.4.3
-parso==0.8.1
-pathy==0.6.1
-Pillow==9.1.1
-polls==0.1
-preshed==3.0.6
-prometheus-client==0.9.0
-prompt-toolkit==3.0.14
-psycopg2-binary==2.9.1
-PyAudio==0.2.11
-pydantic==1.8.2
-Pygments==2.7.4
-pylint==2.6.0
-pyzmq==22.0.2
-qtconsole==5.0.2
-Shapely==1.8.1.post1
-smart-open==5.2.1
-snowballstemmer==2.2.0
-spacy==3.3.1
-spacy-legacy==3.0.9
-spacy-loggers==1.0.2
-Sphinx==4.5.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-srsly==2.4.3
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.26.0
-terminado==0.9.2
-thinc==8.0.17
-toml==0.10.2
-torch==1.8.1
-torchcam==0.3.1
-torchvision==0.9.1
-tornado==6.1
-traitlets==5.0.5
-trio==0.21.0
-ttach==0.0.3
-typer==0.4.1
-wasabi==0.9.1
-webdriver-manager==3.7.1
-xlrd==2.0.1
-zipp==3.8.0
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+Django==4.1.1
+django-cors-headers==3.13.0
+djangorestframework==3.13.1
+nltk==3.7
+regex==2022.9.13
