--- a/humm-frontend/package.json
+++ b/humm-frontend/package.json
@@ -56,7 +56,11 @@
       "last 1 safari version"
     ]
   },
+
+  "engines": {
+    "npm": ">=8.7.0"
+  },
   "overrides": {
-    "@svgr/webpack": "@svgr/webpack"
+    "react": "$react"
   }
 }
