--- a/humm-frontend/package.json
+++ b/humm-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "humm-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "https://humm-biotech.herokuapp.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-regular-svg-icons": "^6.1.2",
