--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,3 +46,7 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build-and-test
+        filters:
+              branches:
+                only:
+                  - backend-release
