--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,10 +43,10 @@ jobs:
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+    # Inside the workflow, you define the jobs you want to run
     jobs:
-      - build-and-test
-        filters:
-              branches:
-                only:
-                  - backend-release
+      - test:
+          filters:
+            branches:
+              only:
+                - backend-release
