--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,5 +27,5 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        cd ../../humm_backend
+        cd humm_backend
         python manage.py test
