--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
-Django==4.1.1
+Django
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
 nltk==3.7
